--- a/MANIFEST.in
+++ b/MANIFEST.in
@@ -1,11 +1,6 @@
-include MANIFEST.in
 include README.rst
 include LICENSE.txt
-include requirements.txt
 recursive-include fachschaftsempfaenger/static *
 recursive-include fachschaftsempfaenger/templates *
 recursive-include fachschaftsempfaenger/templatetags *
-graft fachschaftsempfaenger
-graft docs
-global-exclude __pycache__
-prune docs/build
+recursive-include docs *
